# levitation

./: README.md
haskell/: LICENSE  levitation.cabal
haskell/src/Generics/: Levitation.hs
idris/: Ch2_1_2.idr  Ch2_1_3.idr  Ch2_1_4.idr  Ch2_2.idr  Ch2_3.idr
