name:                levitation
version:             0.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
-- copyright:
category:            Generics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Generics.Levitation
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.9 && < 4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
